--- a/gb/23/3/4/n13943211.md
+++ b/gb/23/3/4/n13943211.md
@@ -11,12 +11,12 @@
 <p>27岁的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A2%85%E5%BE%B7%E9%9F%A6%E6%9D%B0%E5%A4%AB.md#1">梅德韦杰夫</a>近来状态火热，本站比赛前，他已经连续在ATP500鹿特丹站和ATP250卡塔尔站夺得冠军。来到迪拜后，梅德韦杰夫继续着自己神勇的状态。在半决赛上，他与当今世界排名第一的德约科维奇（Novak Djokovic）进行了一场巅峰对决。</p>
 <p>结果，塞尔维亚球王德约科维奇以两个4-6不敌劲敌梅德韦杰夫，无缘决赛，本赛季15连胜就此惨遭终结。接着来，德约科维奇将回到塞尔维亚，等待自己申请入境美国签证的结果。</p>
 <figure id="attachment_13943267" aria-describedby="caption-attachment-13943267" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/03/id13943267-GettyImages-1470995480-578x400.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-13943267" src="https://i.epochtimes.com/assets/uploads/2023/03/id13943267-GettyImages-1470995480-578x400.jpg" alt="" width="600" b="424" /></a><figcaption id="caption-attachment-13943267" class="wp-caption-text">2023年3月3日，男子<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BD%91%E5%9D%9B.md#1">网坛</a>ATP500<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BF%AA%E6%8B%9C%E7%AB%99.md#1">迪拜站</a>男单半决赛上，塞尔维亚球王德约科维奇以两个4-6不敌劲敌梅德韦杰夫，无缘决赛，本赛季15连胜就此惨遭终结。图为德约科维奇比赛中击球瞬间。(Francois Nel/Getty Images)</figcaption></figure>
-<p>由于塞尔维亚人没有接种Covid-19疫苗，按照美国当局的规定，他仍然无法进入美国，需要得到美国政府特批，才能参加本月进行的印第安维尔斯和迈阿密——两站北美硬地背靠背赛事。这两项ATP1000赛事也被称为北美“阳光双赛”。目前看来，德约科维奇大概率将无法参赛。这样的话，他只能安心备战今年4月份的红土赛季了。</p>
+<p>由于这个塞尔维亚人没有接种Covid-19疫苗，按照美国当局的规定，他仍然无法进入美国，需要得到美国政府特批，才能参加本月进行的印第安维尔斯和迈阿密——两站北美硬地背靠背赛事。这两项ATP1000赛事也被称为北美“阳光双赛”。目前看来，德约科维奇大概率将无法参赛。这样的话，他只能安心备战今年4月份的红土赛季了。</p>
 <p>对德约科维奇来讲，好消息是他的腿伤恢复情况不错，目前已经没有大碍；而上周，他占据“世界第一”宝座的周数也已经累计达到了378周，从而超越德国球后格拉芙（Steffi Graf），独享网坛最长“世界第一”历史纪录。</p>
 <h2>两位同胞好友隔网而战</h2>
 <p>在决赛中，与梅德韦杰夫隔网而战的是其同胞兼好友——25岁的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%A2%E5%B8%83%E5%88%97%E5%A4%AB.md#1">卢布列夫</a>。卢布列夫本赛季表现一般，但来到去年夺冠的福地，他的状态获得明显提升，尤其是半决赛力克自己的“苦手”兹维列夫，让俄罗斯人找回了昔日的自信，准备向个人的第13个巡回赛冠军奖杯发起冲击。</p>
 <figure id="attachment_13943270" aria-describedby="caption-attachment-13943270" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/03/id13943270-GettyImages-1471227926-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-13943270" src="https://i.epochtimes.com/assets/uploads/2023/03/id13943270-GettyImages-1471227926-600x400.jpg" alt="" width="600" b="398" /></a><figcaption id="caption-attachment-13943270" class="wp-caption-text">2023年3月4日，男子网坛ATP500迪拜站男单决赛上，赛会三号种子、俄罗斯名将梅德韦杰夫（Daniil Medvedev）以两个6-2轻取卫冕冠军、同胞卢布列夫（Andrey Rublev、右）连续三周夺冠。(Francois Nel/Getty Images)</figcaption></figure>
-<p>从目前的状态上看，梅德韦杰夫显然更胜一筹。最近，他的各项技术环节全面获得提升，包括他此前的糟糕正手和发球，都渐渐恢复到了他当年美网夺冠时的水准，成为本赛季击败“世界第一”的第一人，让梅德韦杰夫也信心爆棚。</p>
+<p>从两人目前状态来看，梅德韦杰夫显然更胜一筹。最近，他的各项技术环节全面获得提升，包括他此前的糟糕正手和发球，都渐渐恢复到了他当年美网夺冠时的水准，成为本赛季击败“世界第一”的第一人，让梅德韦杰夫也信心爆棚。</p>
 <figure id="attachment_13943268" aria-describedby="caption-attachment-13943268" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/03/id13943268-GettyImages-1471215960-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium_vertical wp-image-13943268" src="https://i.epochtimes.com/assets/uploads/2023/03/id13943268-GettyImages-1471215960-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13943268" class="wp-caption-text">2023年3月4日，男子网坛ATP500迪拜站男单决赛上，俄罗斯名将梅德韦杰夫以两个6-2轻取同胞卢布列夫，连续三周夺冠。图为卫冕冠军卢布列夫比赛中击球瞬间。(Francois Nel/Getty Images)</figcaption></figure>
 <p>两人此前有过六次交手记录，梅德韦杰夫赢了前四次交锋，卢布列夫则拿下了最近两次胜利。两人最近一次交手发生在去年年终总决赛小组赛，当时卢布列夫苦战三盘，惊险胜出。</p>
 <h2>梅德韦杰夫轻松夺冠</h2>
@@ -25,7 +25,7 @@
 <p>第二盘，卢布列夫背水一战，全力以赴。两人前四局打得难解难分，各自保发，战成2-2平。第5局，经过多拍相持后，梅德韦杰夫率先发力，再度完成破发，然后顺势保发，取得4-2领先。第7局，梅德韦杰夫再次破掉对手的发球局，以5-2领先，进入自己的发球胜冠局。第8局，梅德韦杰夫一鼓作气，轻松保发，以6-2赢得比赛的胜利。</p>
 <figure id="attachment_13943271" aria-describedby="caption-attachment-13943271" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/03/id13943271-GettyImages-1471228757-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-13943271" src="https://i.epochtimes.com/assets/uploads/2023/03/id13943271-GettyImages-1471228757-600x400.jpg" alt="" width="600" b="404" /></a><figcaption id="caption-attachment-13943271" class="wp-caption-text">2023年3月4日，男子网坛ATP500迪拜站男单决赛上，赛会三号种子、俄罗斯名将梅德韦杰夫（Daniil Medvedev）以两个6-2轻取卫冕冠军、同胞卢布列夫，连续三周夺冠。(Francois Nel/Getty Images)</figcaption></figure>
 <p>在整场比赛仅耗时1小时08分钟，两人的竞技水平完全不在同一个档次上。不能说卫冕冠军卢布列夫发挥不好，只是因为梅德韦杰夫状态太好。这是梅德韦杰夫连续三周在巡回赛中夺冠，成为新赛季首个“三冠王”，取得澳网之后14场连胜的同时，他也得到了个人职业生涯第18座单打冠军。</p>
-<p>责任编辑：郑煌</p>
+<p>责任编辑：郑煌 #</p>
 	
 <hr>
 
@@ -39,31 +39,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/7/n10959110.md#1" target="_blank">冯八飞：请问候劳鹤——真正的知识分子爱因斯坦</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/4/n10688678.md#1" target="_blank">摆脱人生困境 美国女子重拾幸福</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/25/n10247979.md#1" target="_blank">中共淫乱的前生今世（6）淫乱大看台</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11281560.md#1" target="_blank">加拿大魁北克庆法轮大法日 市长议员祝贺</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940368.md#1">【未解之谜】ChatGPT技术 犹太传说中早就有了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938144.md#1">有前世记忆作家：我在母亲怀孕4个月时投胎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13940235.md#1">神韵艺术考级中心——最顶级中国古典舞教学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937666.md#1">得遇高人传授秘术 明代两位医生疗疾如神</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13905926.md#1">《兰亭集序》背后的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13943134.md#1">【马克时空】乌克兰需要战机 F-16 vs A-10</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/3/n13942597.md#1">【中国禁闻】中共放弃清零决策内幕被曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13943125.md#1">【财商天下】迅速崛起 印度或被短板拖累</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/3/n13942196.md#1">网络热传李克强“告别合影”视频 引发关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/3/n13942492.md#1">胡春华坐政协主席台 分析：习对团派细微让步</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/3/n13942270.md#1">中共两会四面楚歌 专家：经济或倒退20年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940944.md#1">汤唯带女儿吃披萨 拍照一动作获夸赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941820.md#1">大陆演员李飞无戏可拍 回老家摆摊卖鱼近一年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940969.md#1">贾静雯外游手指肿胀剧痛 返台就医方知被误诊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/3/n13942567.md#1">出道37年不开社交账号 张学友自曝个中原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/3/n13941933.md#1">主演《断网》 郭富城林家栋自认是科技小白</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938702.md#1">不打针不吃药 自然疗法治关节炎9要点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941549.md#1">在人休息时，癌症醒来和扩散</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938530.md#1">降压减重就靠这运动 3种策略做起来不累</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941597.md#1">这些症状没解决 更年期就会一直持续</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941365.md#1">生病之后应该换牙刷吗？ 看看专家怎么说</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/3/4/n13943211.htm">男网迪拜站：梅德韦杰夫击败卫冕冠军夺冠</a></p><hr>
