--- a/gb/23/3/3/n13942108.md
+++ b/gb/23/3/3/n13942108.md
@@ -9,9 +9,9 @@
 	<p>【大纪元2023年03月03日讯】（大纪元记者方金媛台湾高雄报导）美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团2023年3月2日在台湾高雄文化中心最后一场演出爆满落幕。公司负责人徐海伦首度观看神韵，她赞叹，“演出完全超乎预期，令人非常惊艳。”</p>
 <p>舞剧《前所未有的邪恶》让徐海伦最为触动。“很心酸、很心痛的感觉，觉得天降灾祸，就是要处罚这些恶人。被迫害的他们（法轮功学员）只是修炼而已，没做什么坏事，却被迫害了，（中共）做了很多不应该做的事情，但这些都被隐藏起来了。”</p>
 <p>徐海伦经常在网路上浏览法轮功及中国时事相关讯息，她认为，“其实现在多人都知道中共的恶行，已经隐藏不了，已经摊在阳光下了。”“我相信神一定会把这个邪恶除掉，我希望有新的中国出现。”</p>
-<p>她认为，“人心要向善”是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>所要传达的精神内涵，也要牢记“法轮大法好”、“真善忍好”；她衷心盼望“这些恶魔赶快除去，新的希望有一天真的会到来”。</p>
-<p>对于神韵所表现的中国古典舞，她说，“台上一分钟，台下十年功。舞台上每一个<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>演员花了很多年刻苦练习，真的很辛苦！他们所表现的力与美，那种艺术，真的难以形容，因为已达到人体的极限了，比其他舞蹈类型更厉害！”</p>
-<p>她赞赏神韵的动态<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>，“我知道这个有专利，非常棒，从未见过，人物从萤幕上出来又进去，好像魔术，非常奇幻。”</p>
+<p>她认为，“人心要向善”是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>所要传达的精神内涵，也要牢记“法轮大法好”“真善忍好”；她衷心盼望“这些恶魔赶快除去，新的希望有一天真的会到来”。</p>
+<p>对于神韵所表现的中国古典舞，她说，“台上一分钟，台下十年功。舞台上每一个<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>演员花了很多年刻苦练习，真的很辛苦！他们所表现的力与美，那种艺术，真的难以形容，因为已达到人体的极限了，比其它舞蹈类型更厉害！”</p>
+<p>她赞赏神韵的动态<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>，“我知道这个有专利，非常棒，从未见过，人物从天幕上出来又进去，好像魔术，非常奇幻。”</p>
 <p>得知神韵多年，但总是缘悭，如今终于一偿宿愿，她说，“一定要来看，否则真的会很遗憾！”</p>
 <p>责任编辑：于嫚</p>
 	
@@ -29,31 +29,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/3/n9802518.md#1" target="_blank">你不了解的邓小平：与毛一同指挥大跃进（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/28/n11352168.md#1" target="_blank">前大陆公安：中共镇压法轮功早有预谋</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/9/n11101863.md#1" target="_blank">【征文】章阁：中共设风水乱局 破坏北京古城</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11406694.md#1" target="_blank">美国会吁中共释放法轮功学员 邓翠苹女儿感谢</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924740.md#1">祈祷中神的回应：救人的神已来在人世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923680.md#1">【古道人生】逃难女不甘受辱 一掌击退镖师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938144.md#1">有前世记忆作家：我在母亲怀孕4个月时投胎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937718.md#1">【未解之谜】植物口香糖？恶魔之果？槟榔的秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940368.md#1">【未解之谜】ChatGPT技术 犹太传说中早就有了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940979.md#1">【环球直击】瞒不住了 大陆失业率60年最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941423.md#1">【有冇搞错】美中只差一个“珍珠港”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941100.md#1">【时事军事】解放克里米亚或许在顿巴斯之前</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13940151.md#1">马斯克转发武汉病毒所泄漏言论 官媒发文恫吓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13940169.md#1">郑欣宜继承遗产是乌龙？沈殿霞生前挚友解密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940925.md#1">两会将至 习经济领导班子大洗牌 4人受关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13940169.md#1">郑欣宜继承遗产是乌龙？沈殿霞生前挚友解密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940944.md#1">汤唯带女儿吃披萨 拍照一动作获夸赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940263.md#1">孙俪晒女儿跳舞比赛照 邓超不识奖牌超搞笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940969.md#1">贾静雯外游手指肿胀剧痛 返台就医方知被误诊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13939675.md#1">金马影后刘美君滑雪出意外 右腿包扎吓坏网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/21/n13934796.md#1">这一食物是良药 每天吃两个患癌风险降45%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13939693.md#1">到阿里山石棹赏夜樱追云海琉璃光和观银河</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929714.md#1">当被别人瞧不起 你是反击？还是保持距离</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13940182.md#1">台湾体操名将跟腱断裂 肌腱伤害一般人也要注意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13939873.md#1">到国外旅行如何省钱？ 专家教你5招</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/3/3/n13942108.htm">公司负责人：神韵超乎预期 令人非常惊艳</a></p><hr>
